# 2-tde-cmake

./: cmake-trinity.spec  import.info  tde-cmake.spec
.gear/: rules
altlinux/: fix_translate.patch
cmake-trinity/: .tdescminfo
cmake-trinity/modules/: FindTDE.cmake  TDEL10n.cmake  TDEMacros.cmake  TDESetupPaths.cmake  TDEVersion.cmake  tde_l10n_merge.pl
cmake-trinity/templates/: tde_tdeinit_module.cmake
tde-cmake/: CMakeLists.txt  generate_apidox
tde-cmake/modules/: FindTQt.cmake  tde_automoc.cmake  tde_uic.cmake
tde-cmake/templates/: tde_export_library.cmake
